Finalização do Cabeçalho

--- a/Projetos/Aulas/layoutPastas/index.html
+++ b/Projetos/Aulas/layoutPastas/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Exemplo de layout padrão</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
     <link href="layout.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -15,7 +16,9 @@
         </form>
 
     </div>
-    <div>Configurações</div>
+    <div><span class="material-symbols-outlined">
+         settings
+        </span></div>
     </header>
 
 
